src/main/java/cc/ayakurayuki/psi/parser/NginxParser.java
// This is a generated file. Not intended for manual editing.
package cc.ayakurayuki.psi.parser;

import static cc.ayakurayuki.psi.Types.BINARY_OPERATOR;
import static cc.ayakurayuki.psi.Types.BLOCK_STMT;
import static cc.ayakurayuki.psi.Types.CARET_TILDE;
import static cc.ayakurayuki.psi.Types.COMMENT;
import static cc.ayakurayuki.psi.Types.CONCATENATED_EXPR;
import static cc.ayakurayuki.psi.Types.CONDITION_EXPR;
import static cc.ayakurayuki.psi.Types.CONDITION_STMT;
import static cc.ayakurayuki.psi.Types.DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.DQSTRING;
import static cc.ayakurayuki.psi.Types.DQUOTE;
import static cc.ayakurayuki.psi.Types.GEO;
import static cc.ayakurayuki.psi.Types.GEO_BLOCK_CONTENT;
import static cc.ayakurayuki.psi.Types.GEO_BLOCK_STMT;
import static cc.ayakurayuki.psi.Types.GEO_DEFAULT;
import static cc.ayakurayuki.psi.Types.GEO_DEFAULT_STMT;
import static cc.ayakurayuki.psi.Types.GEO_DELETE;
import static cc.ayakurayuki.psi.Types.GEO_DELETE_STMT;
import static cc.ayakurayuki.psi.Types.GEO_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.GEO_INCLUDE;
import static cc.ayakurayuki.psi.Types.GEO_INCLUDE_STMT;
import static cc.ayakurayuki.psi.Types.GEO_PROXY;
import static cc.ayakurayuki.psi.Types.GEO_PROXY_STMT;
import static cc.ayakurayuki.psi.Types.GEO_RANGES;
import static cc.ayakurayuki.psi.Types.GEO_RANGES_STMT;
import static cc.ayakurayuki.psi.Types.GEO_STMT;
import static cc.ayakurayuki.psi.Types.GEO_VALUE_STMT;
import static cc.ayakurayuki.psi.Types.IDENTIFIER;
import static cc.ayakurayuki.psi.Types.IF;
import static cc.ayakurayuki.psi.Types.IF_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.IF_PAREN_STMT;
import static cc.ayakurayuki.psi.Types.IF_STMT;
import static cc.ayakurayuki.psi.Types.LBRACE;
import static cc.ayakurayuki.psi.Types.LOCATION;
import static cc.ayakurayuki.psi.Types.LOCATION_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.LOCATION_MODIFIER_STMT;
import static cc.ayakurayuki.psi.Types.LOCATION_PATH_STMT;
import static cc.ayakurayuki.psi.Types.LOCATION_STMT;
import static cc.ayakurayuki.psi.Types.LPAREN;
import static cc.ayakurayuki.psi.Types.LUA;
import static cc.ayakurayuki.psi.Types.LUA_BLOCK_DIRECTIVE;
import static cc.ayakurayuki.psi.Types.LUA_BLOCK_STMT;
import static cc.ayakurayuki.psi.Types.LUA_CODE_STMT;
import static cc.ayakurayuki.psi.Types.LUA_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.LUA_STMT;
import static cc.ayakurayuki.psi.Types.MAP;
import static cc.ayakurayuki.psi.Types.MAP_BLOCK_CONTENT;
import static cc.ayakurayuki.psi.Types.MAP_BLOCK_STMT;
import static cc.ayakurayuki.psi.Types.MAP_DEFAULT;
import static cc.ayakurayuki.psi.Types.MAP_DEFAULT_STMT;
import static cc.ayakurayuki.psi.Types.MAP_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.MAP_HOSTNAMES;
import static cc.ayakurayuki.psi.Types.MAP_HOSTNAMES_STMT;
import static cc.ayakurayuki.psi.Types.MAP_INCLUDE;
import static cc.ayakurayuki.psi.Types.MAP_INCLUDE_STMT;
import static cc.ayakurayuki.psi.Types.MAP_STMT;
import static cc.ayakurayuki.psi.Types.MAP_VALUE_STMT;
import static cc.ayakurayuki.psi.Types.MAP_VOLATILE;
import static cc.ayakurayuki.psi.Types.MAP_VOLATILE_STMT;
import static cc.ayakurayuki.psi.Types.NAME_STMT;
import static cc.ayakurayuki.psi.Types.QUOTE;
import static cc.ayakurayuki.psi.Types.RBRACE;
import static cc.ayakurayuki.psi.Types.REGULAR_DIRECTIVE_STMT;
import static cc.ayakurayuki.psi.Types.RPAREN;
import static cc.ayakurayuki.psi.Types.SEMICOLON;
import static cc.ayakurayuki.psi.Types.STRING;
import static cc.ayakurayuki.psi.Types.STRING_STMT;
import static cc.ayakurayuki.psi.Types.UNARY_OPERATOR;
import static cc.ayakurayuki.psi.Types.VALUE;
import static cc.ayakurayuki.psi.Types.VALUE_STMT;
import static cc.ayakurayuki.psi.Types.VARIABLE;
import static cc.ayakurayuki.psi.Types.VARIABLE_STMT;
import static com.intellij.lang.parser.GeneratedParserUtilBase.TRUE_CONDITION;
import static com.intellij.lang.parser.GeneratedParserUtilBase._COLLAPSE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase._NONE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.adapt_builder_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeToken;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeTokens;
import static com.intellij.lang.parser.GeneratedParserUtilBase.current_position_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.empty_element_parsed_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.enter_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.exit_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.nextTokenIs;
import static com.intellij.lang.parser.GeneratedParserUtilBase.recursion_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.report_error_;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NginxParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, null);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return nginxFile(b, l + 1);
    }

    /* ********************************************************** */
    // LBRACE statement* RBRACE
    public static boolean block_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "block_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LBRACE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, BLOCK_STMT, null);
        r = consumeToken(b, LBRACE);
        p = r; // pin = 1
        r = r && report_error_(b, block_stmt_1(b, l + 1));
        r = p && consumeToken(b, RBRACE) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // statement*
    private static boolean block_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "block_stmt_1")) {
            return false;
        }
        while (true) {
            int c = current_position_(b);
            if (!statement(b, l + 1)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "block_stmt_1", c)) {
                break;
            }
        }
        return true;
    }

    /* ********************************************************** */
    // (variable_stmt | VALUE | IDENTIFIER) +
    public static boolean concatenated_expr(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "concatenated_expr")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONCATENATED_EXPR, "<concatenated expr>");
        r = concatenated_expr_0(b, l + 1);
        while (r) {
            int c = current_position_(b);
            if (!concatenated_expr_0(b, l + 1)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "concatenated_expr", c)) {
                break;
            }
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // variable_stmt | VALUE | IDENTIFIER
    private static boolean concatenated_expr_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "concatenated_expr_0")) {
            return false;
        }
        boolean r;
        r = variable_stmt(b, l + 1);
        if (!r) {
            r = consumeToken(b, VALUE);
        }
        if (!r) {
            r = consumeToken(b, IDENTIFIER);
        }
        return r;
    }

    /* ********************************************************** */
    // concatenated_expr | string_stmt
    public static boolean condition_expr(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_expr")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONDITION_EXPR, "<condition expr>");
        r = concatenated_expr(b, l + 1);
        if (!r) {
            r = string_stmt(b, l + 1);
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // UNARY_OPERATOR condition_expr | condition_expr (BINARY_OPERATOR condition_expr)?
    public static boolean condition_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_stmt")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONDITION_STMT, "<condition stmt>");
        r = condition_stmt_0(b, l + 1);
        if (!r) {
            r = condition_stmt_1(b, l + 1);
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // UNARY_OPERATOR condition_expr
    private static boolean condition_stmt_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_stmt_0")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, UNARY_OPERATOR);
        r = r && condition_expr(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // condition_expr (BINARY_OPERATOR condition_expr)?
    private static boolean condition_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_stmt_1")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = condition_expr(b, l + 1);
        r = r && condition_stmt_1_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (BINARY_OPERATOR condition_expr)?
    private static boolean condition_stmt_1_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_stmt_1_1")) {
            return false;
        }
        condition_stmt_1_1_0(b, l + 1);
        return true;
    }

    // BINARY_OPERATOR condition_expr
    private static boolean condition_stmt_1_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "condition_stmt_1_1_0")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BINARY_OPERATOR);
        r = r && condition_expr(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // regular_directive_stmt
    //                     | map_directive_stmt
    //                     | geo_directive_stmt
    //                     | lua_directive_stmt
    //                     | if_directive_stmt
    //                     | location_directive_stmt
    public static boolean directive_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "directive_stmt")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, DIRECTIVE_STMT, "<directive stmt>");
        r = regular_directive_stmt(b, l + 1);
        if (!r) {
            r = map_directive_stmt(b, l + 1);
        }
        if (!r) {
            r = geo_directive_stmt(b, l + 1);
        }
        if (!r) {
            r = lua_directive_stmt(b, l + 1);
        }
        if (!r) {
            r = if_directive_stmt(b, l + 1);
        }
        if (!r) {
            r = location_directive_stmt(b, l + 1);
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // geo_delete_stmt |
    //     geo_default_stmt |
    //     geo_proxy_stmt |
    //     geo_ranges_stmt |
    //     geo_include_stmt |
    //     geo_value_stmt
    public static boolean geo_block_content(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_block_content")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, GEO_BLOCK_CONTENT, "<geo block content>");
        r = geo_delete_stmt(b, l + 1);
        if (!r) {
            r = geo_default_stmt(b, l + 1);
        }
        if (!r) {
            r = geo_proxy_stmt(b, l + 1);
        }
        if (!r) {
            r = geo_ranges_stmt(b, l + 1);
        }
        if (!r) {
            r = geo_include_stmt(b, l + 1);
        }
        if (!r) {
            r = geo_value_stmt(b, l + 1);
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // LBRACE geo_block_content* RBRACE
    public static boolean geo_block_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_block_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LBRACE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_BLOCK_STMT, null);
        r = consumeToken(b, LBRACE);
        p = r; // pin = 1
        r = r && report_error_(b, geo_block_stmt_1(b, l + 1));
        r = p && consumeToken(b, RBRACE) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // geo_block_content*
    private static boolean geo_block_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_block_stmt_1")) {
            return false;
        }
        while (true) {
            int c = current_position_(b);
            if (!geo_block_content(b, l + 1)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "geo_block_stmt_1", c)) {
                break;
            }
        }
        return true;
    }

    /* ********************************************************** */
    // GEO_DEFAULT value_stmt SEMICOLON
    public static boolean geo_default_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_default_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO_DEFAULT)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_DEFAULT_STMT, null);
        r = consumeToken(b, GEO_DEFAULT);
        p = r; // pin = 1
        r = r && report_error_(b, value_stmt(b, l + 1));
        r = p && consumeToken(b, SEMICOLON) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // GEO_DELETE value_stmt SEMICOLON
    public static boolean geo_delete_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_delete_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO_DELETE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_DELETE_STMT, null);
        r = consumeToken(b, GEO_DELETE);
        p = r; // pin = 1
        r = r && report_error_(b, value_stmt(b, l + 1));
        r = p && consumeToken(b, SEMICOLON) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // geo_stmt variable_stmt [variable_stmt] geo_block_stmt
    public static boolean geo_directive_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_directive_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_DIRECTIVE_STMT, null);
        r = geo_stmt(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, variable_stmt(b, l + 1));
        r = p && report_error_(b, geo_directive_stmt_2(b, l + 1)) && r;
        r = p && geo_block_stmt(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // [variable_stmt]
    private static boolean geo_directive_stmt_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_directive_stmt_2")) {
            return false;
        }
        variable_stmt(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // GEO_INCLUDE value_stmt SEMICOLON
    public static boolean geo_include_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_include_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO_INCLUDE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_INCLUDE_STMT, null);
        r = consumeToken(b, GEO_INCLUDE);
        p = r; // pin = 1
        r = r && report_error_(b, value_stmt(b, l + 1));
        r = p && consumeToken(b, SEMICOLON) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // GEO_PROXY value_stmt SEMICOLON
    public static boolean geo_proxy_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_proxy_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO_PROXY)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_PROXY_STMT, null);
        r = consumeToken(b, GEO_PROXY);
        p = r; // pin = 1
        r = r && report_error_(b, value_stmt(b, l + 1));
        r = p && consumeToken(b, SEMICOLON) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // GEO_RANGES SEMICOLON
    public static boolean geo_ranges_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_ranges_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO_RANGES)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_RANGES_STMT, null);
        r = consumeTokens(b, 1, GEO_RANGES, SEMICOLON);
        p = r; // pin = 1
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // GEO
    public static boolean geo_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, GEO)) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, GEO);
        exit_section_(b, m, GEO_STMT, r);
        return r;
    }

    /* ********************************************************** */
    // value_stmt value_stmt SEMICOLON
    public static boolean geo_value_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "geo_value_stmt")) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GEO_VALUE_STMT, "<geo value stmt>");
        r = value_stmt(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, value_stmt(b, l + 1));
        r = p && consumeToken(b, SEMICOLON) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // if_stmt if_paren_stmt block_stmt
    public static boolean if_directive_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "if_directive_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, IF)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, IF_DIRECTIVE_STMT, null);
        r = if_stmt(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, if_paren_stmt(b, l + 1));
        r = p && block_stmt(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // LPAREN condition_stmt RPAREN
    public static boolean if_paren_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "if_paren_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LPAREN)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, IF_PAREN_STMT, null);
        r = consumeToken(b, LPAREN);
        p = r; // pin = 1
        r = r && report_error_(b, condition_stmt(b, l + 1));
        r = p && consumeToken(b, RPAREN) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // IF
    public static boolean if_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "if_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, IF)) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, IF);
        exit_section_(b, m, IF_STMT, r);
        return r;
    }

    /* ********************************************************** */
    // location_stmt location_modifier_stmt? location_path_stmt block_stmt
    public static boolean location_directive_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_directive_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LOCATION)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, LOCATION_DIRECTIVE_STMT, null);
        r = location_stmt(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, location_directive_stmt_1(b, l + 1));
        r = p && report_error_(b, location_path_stmt(b, l + 1)) && r;
        r = p && block_stmt(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // location_modifier_stmt?
    private static boolean location_directive_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_directive_stmt_1")) {
            return false;
        }
        location_modifier_stmt(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // (BINARY_OPERATOR | CARET_TILDE)?
    public static boolean location_modifier_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_modifier_stmt")) {
            return false;
        }
        Marker m = enter_section_(b, l, _NONE_, LOCATION_MODIFIER_STMT, "<location modifier stmt>");
        location_modifier_stmt_0(b, l + 1);
        exit_section_(b, l, m, true, false, null);
        return true;
    }

    // BINARY_OPERATOR | CARET_TILDE
    private static boolean location_modifier_stmt_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_modifier_stmt_0")) {
            return false;
        }
        boolean r;
        r = consumeToken(b, BINARY_OPERATOR);
        if (!r) {
            r = consumeToken(b, CARET_TILDE);
        }
        return r;
    }

    /* ********************************************************** */
    // value_stmt
    public static boolean location_path_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_path_stmt")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, LOCATION_PATH_STMT, "<location path stmt>");
        r = value_stmt(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // LOCATION
    public static boolean location_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "location_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LOCATION)) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, LOCATION);
        exit_section_(b, m, LOCATION_STMT, r);
        return r;
    }

    /* ********************************************************** */
    // LBRACE lua_code_stmt RBRACE
    public static boolean lua_block_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "lua_block_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LBRACE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, LUA_BLOCK_STMT, null);
        r = consumeToken(b, LBRACE);
        p = r; // pin = 1
        r = r && report_error_(b, lua_code_stmt(b, l + 1));
        r = p && consumeToken(b, RBRACE) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // LUA+
    public static boolean lua_code_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "lua_code_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LUA)) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, LUA);
        while (r) {
            int c = current_position_(b);
            if (!consumeToken(b, LUA)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "lua_code_stmt", c)) {
                break;
            }
        }
        exit_section_(b, m, LUA_CODE_STMT, r);
        return r;
    }

    /* ********************************************************** */
    // lua_stmt value_stmt* lua_block_stmt
    public static boolean lua_directive_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "lua_directive_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LUA_BLOCK_DIRECTIVE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, LUA_DIRECTIVE_STMT, null);
        r = lua_stmt(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, lua_directive_stmt_1(b, l + 1));
        r = p && lua_block_stmt(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // value_stmt*
    private static boolean lua_directive_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "lua_directive_stmt_1")) {
            return false;
        }
        while (true) {
            int c = current_position_(b);
            if (!value_stmt(b, l + 1)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "lua_directive_stmt_1", c)) {
                break;
            }
        }
        return true;
    }

    /* ********************************************************** */
    // LUA_BLOCK_DIRECTIVE
    public static boolean lua_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "lua_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LUA_BLOCK_DIRECTIVE)) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, LUA_BLOCK_DIRECTIVE);
        exit_section_(b, m, LUA_STMT, r);
        return r;
    }

    /* ********************************************************** */
    // map_volatile_stmt |
    //     map_default_stmt |
    //     map_hostnames_stmt |
    //     map_include_stmt |
    //     map_value_stmt
    public static boolean map_block_content(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "map_block_content")) {
            return false;
        }
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, MAP_BLOCK_CONTENT, "<map block content>");
        r = map_volatile_stmt(b, l + 1);
        if (!r) {
            r = map_default_stmt(b, l + 1);
        }
        if (!r) {
            r = map_hostnames_stmt(b, l + 1);
        }
        if (!r) {
            r = map_include_stmt(b, l + 1);
        }
        if (!r) {
            r = map_value_stmt(b, l + 1);
        }
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // LBRACE map_block_content* RBRACE
    public static boolean map_block_stmt(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "map_block_stmt")) {
            return false;
        }
        if (!nextTokenIs(b, LBRACE)) {
            return false;
        }
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, MAP_BLOCK_STMT, null);
        r = consumeToken(b, LBRACE);
        p = r; // pin = 1
        r = r && report_error_(b, map_block_stmt_1(b, l + 1));
        r = p && consumeToken(b, RBRACE) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // map_block_content*
    private static boolean map_block_stmt_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "map_block_stmt_1")) {
            return false;
        }
        while (true) {
            int c = current_position_(b);
            if (!map_block_content(b, l + 1)) {
                break;
            }
            if (!empty_element_parsed_guard_(b, "map_block_stmt_1", c)) {
                break;
            }
        }
        return true;
    }
